-
Bug
-
Resolution: Done
-
P2: Important
-
5.14.2
-
None
-
-
1d18591
Compiling the qtwayland examples I get the following compile failure for examples/wayland/texture-sharing/custom-compositor:
main.cpp:83:33: error: ‘GL_RGBA8’ was not declared in this scope; did you mean ‘GL_RGBA4’? 83 | *glInternalFormat = GL_RGBA8; | ^~~~~~~~ | GL_RGBA4 main.cpp:120:33: error: ‘GL_RGBA8’ was not declared in this scope; did you mean ‘GL_RGBA4’? 120 | *glInternalFormat = GL_RGBA8; | ^~~~~~~~ | GL_RGBA4
The same is fixes in various other places by:
#ifndef GL_RGBA8 #define GL_RGBA8 0x8058 #endif