examples: fix wayland/texture-sharing/custom-compositor

Fixes:

  main.cpp:83:33: error: ‘GL_RGBA8’ was not declared in this scope; did you mean ‘GL_RGBA4’?
     83 |             *glInternalFormat = GL_RGBA8;
        |                                 ^~~~~~~~
        |                                 GL_RGBA4
  main.cpp:120:33: error: ‘GL_RGBA8’ was not declared in this scope; did you mean ‘GL_RGBA4’?
    120 |             *glInternalFormat = GL_RGBA8;
        |                                 ^~~~~~~~
        |                                 GL_RGBA4

Task-number: QTBUG-83304
Change-Id: I0515f3303b08c405d162986e280e9a7bd35e28f7
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>